init: slides and content

--- a/index.html
+++ b/index.html
@@ -1,23 +1,97 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-		<title>reveal.js</title>
+		<title>
+			Docker and Containers
+		</title>
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="dist/reset.css" />
+		<link rel="stylesheet" href="dist/reveal.css" />
+		<link rel="stylesheet" href="dist/theme/solarized.css" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="plugin/highlight/monokai.css" />
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h2>
+						Docker and Containers
+					</h2>
+					<div>
+						<img src="assets/main-logo.png" width="300" />
+					</div>
+					<small>
+						Cloud Computing Workshop 1
+					</small>
+					<br />
+					<small>
+						Presented by Javad Rajabi and Amirhossein Najafizadeh
+					</small>
+					<br />
+					<small>
+						Spring 2023
+					</small>
+				</section>
+				<section>
+					<h3>
+						Workshop Content
+					</h3>
+					<ul>
+						<li>
+							Containers
+							<ul>
+								<li>
+									Isolation
+								</li>
+								<li>
+									Architecture
+								</li>
+								<li>
+									Cgroups and Namespaces
+								</li>
+								<li>
+									RunC
+								</li>
+							</ul>
+						</li>
+						<li>
+							Docker
+							<ul>
+								<li>
+									Image
+								</li>
+								<li>
+									Container
+								</li>
+								<li>
+									Network
+								</li>
+								<li>
+									Volume
+								</li>
+								<li>
+									Dockerfile
+								</li>
+								<li>
+									Dockerhub
+								</li>
+								<li>
+									Docker-Compose
+								</li>
+								<li>
+									Swarm
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
 			</div>
 		</div>
 
