--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
 						</li>
 					</ul>
 				</section>
+				<section>
+					<h3>
+						Containers: Isolation
+					</h3>
+				</section>
 			</div>
 		</div>
 
