--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 					<h3>
 						Containers: Isolation
 					</h3>
+					<p>
+						Container isolation involves isolating a containerized application's 
+						runtime environment from the host operating system and other 
+						processes running on the host.
+					</p>
 				</section>
 				<section>
 					<h3>
@@ -171,6 +176,18 @@
 					<h3>
 						Docker Swarm
 					</h3>
+				</section>
+				<section>
+					<h2>
+						References
+					</h2>
+					<ul>
+						<li>
+							<a href="https://snyk.io/blog/best-practices-for-container-isolation/#:~:text=What%20is%20container%20isolation%2C%20and,processes%20running%20on%20the%20host.">
+								https://snyk.io/blog
+							</a>
+						</li>
+					</ul>
 				</section>
 			</div>
 		</div>
