--- a/index.html
+++ b/index.html
@@ -101,11 +101,18 @@
 						runtime environment from the host operating system and other 
 						processes running on the host.
 					</p>
+					<img src="assets/isolation.png" width="500" />
 				</section>
 				<section>
 					<h3>
 						Containers: Architecture
 					</h3>
+					<p>
+						A containerized architecture makes it possible to package 
+						software and its dependencies in an isolated unit, called a container, 
+						which can run consistently in any environment.
+					</p>
+					<img src="assets/architecture.png" width="500" />
 				</section>
 				<section>
 					<h3>
@@ -185,6 +192,11 @@
 						<li>
 							<a href="https://snyk.io/blog/best-practices-for-container-isolation/#:~:text=What%20is%20container%20isolation%2C%20and,processes%20running%20on%20the%20host.">
 								https://snyk.io/blog
+							</a>
+						</li>
+						<li>
+							<a href="https://www.aquasec.com/cloud-native-academy/container-security/containerized-architecture/#:~:text=What%20is%20a%20Containerized%20Architecture,run%20consistently%20in%20any%20environment.">
+								https://aquasec.com/cloud-native-academy
 							</a>
 						</li>
 					</ul>
