--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@ runc delete mycontainerid
 					<h3>
 						Docker
 					</h3>
+					<p>
+						Docker is a software platform that allows you to build, test, and deploy applications quickly. 
+						Docker packages software into standardized units called containers that have everything 
+						the software needs to run including libraries, system tools, code, and runtime.
+					</p>
+					<img style="background-color: #fff;" src="assets/docker.svg" width="600" />
 				</section>
 				<section>
 					<h3>
@@ -252,6 +258,11 @@ runc delete mycontainerid
 						<li>
 							<a href="https://en.wikipedia.org/wiki/Cgroups#:~:text=cgroups%20(abbreviated%20from%20control%20groups,of%20a%20collection%20of%20processes.">
 								https://en.wikipedia.org/wiki/cgroups
+							</a>
+						</li>
+						<li>
+							<a href="https://aws.amazon.com/docker/#:~:text=Docker%20is%20a%20software%20platform,tools%2C%20code%2C%20and%20runtime.">
+								https://aws.amazon.com/docker
 							</a>
 						</li>
 					</ul>
