--- a/index.html
+++ b/index.html
@@ -258,6 +258,27 @@ $ docker image remove amirhossein21/nginx:v0.1
 				</section>
 				<section>
 					<h3>
+						Docker: Container (cont.)
+					</h3>
+					<p>
+						Container commands:
+					</p>
+					<pre><code>
+# run a container
+$ docker run -d -p 80:80 nginx:latest
+
+# view containers
+$ docker ps
+
+# remove container
+$ docker stop b5ee41eeb951
+
+# get terminal inside a container
+$ docker exec -it 39203d3aea67 bash
+					</code></pre>
+				</section>
+				<section>
+					<h3>
 						Docker: Network
 					</h3>
 				</section>
