--- a/index.html
+++ b/index.html
@@ -316,6 +316,14 @@ $ docker network remove node-app-network
 					<h3>
 						Docker: Volume
 					</h3>
+					<p>
+						A Docker volume is an independent file system entirely managed by Docker and exists as a 
+						normal file or directory on the host, where data is persisted.
+						Volumes are the preferred way to persist data in Docker containers and services. 
+						Some use cases for volumes include: Sharing data among multiple running containers.
+						If you don't explicitly create it, a volume is created the first time it is mounted into a container.
+					</p>
+					<img src="assets/volume.png" width="400" />
 				</section>
 				<section>
 					<h3>
