add: docker swarm

--- a/index.html
+++ b/index.html
@@ -412,6 +412,15 @@ volumes:
 					<h3>
 						Docker Swarm
 					</h3>
+					<p>
+						A Docker Swarm is a container orchestration tool running the Docker application.
+						It has been configured to join together in a cluster.<br />
+						One of the key benefits associated with the operation of a docker swarm is the 
+						high level of availability offered for applications. Docker Swarm 
+						lets you connect containers to multiple hosts similar to Kubernetes. 
+						Docker Swarm has two types of services: replicated and global.
+					</p>
+					<img src="assets/swarm.png" width="450" />
 				</section>
 				<section>
 					<h2>
@@ -441,6 +450,11 @@ volumes:
 						<li>
 							<a href="https://www.docker.com/products/docker-hub/">
 								https://docker.com
+							</a>
+						</li>
+						<li>
+							<a href="https://www.sumologic.com/glossary/docker-swarm/#:~:text=with%20Sumo%20Logic-,What%20is%20a%20Docker%20Swarm%3F,join%20together%20in%20a%20cluster.">
+								https://sumologic.com/docker-swarm
 							</a>
 						</li>
 					</ul>
