feat: presenting slides

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						Docker and Containers
 					</h2>
 					<div>
-						<img src="assets/main-logo.png" width="300" />
+						<img src="assets/main-logo.png" width="200" />
 					</div>
 					<small>
 						Cloud Computing Workshop
@@ -52,19 +52,30 @@
 							Containers
 							<ul>
 								<li>
+									OS System level virtualization
+								</li>
+								<li>
+									History
+								</li>
+								<li>
 									Isolation
 								</li>
 								<li>
 									Architecture
 								</li>
 								<li>
-									Cgroups and Namespaces
+									Cgroups
+								</li>
+								<li>
+									Namespaces
 								</li>
 								<li>
 									RunC
 								</li>
 							</ul>
 						</li>
+					</ul>
+					<ul>
 						<li>
 							Docker
 							<ul>
@@ -85,9 +96,6 @@
 								</li>
 								<li>
 									Dockerhub
-								</li>
-								<li>
-									Docker-Compose
 								</li>
 								<li>
 									Swarm
