--- a/index.html
+++ b/index.html
@@ -517,7 +517,12 @@ $ docker compose down
 						lets you connect containers to multiple hosts similar to Kubernetes. 
 						Docker Swarm has two types of services: replicated and global.
 					</p>
-					<img src="assets/swarm.png" width="450" />
+				</section>
+				<section>
+					<h3>
+						Swarm (cont.)
+					</h3>
+					<img src="assets/swarm.png" width="650" />
 				</section>
 				<section>
 					<h2>
