--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@ $ docker compose down
 					</ul>
 				</section>
 			</div>
+			<div id="slide-counter" style="position: fixed; left: 0; bottom: 0;"></div>
 		</div>
 
 		<script src="dist/reveal.js"></script>
